content align fixed

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -74,7 +74,7 @@ body
             width: 100%
             height: 100%
             border: none
-            padding: 50px
+            padding: 0 10px 0 10px
         footer
             padding: 2%
             text-align: center
